<resources>
    <string name="app_name">Smart Home</string>
    <string name="welcome">Welcome to our app!</string>
    <string name="signup">Đăng ký</string>
    <string name="login">Đăng nhập</string>
    <string name="logout">Đăng xuất</string>
    <string name="name">Họ và tên</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Mật khẩu</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="login_redirect_text">Bạn đã có tài khoản? Đăng nhập</string>
    <string name="signup_redirect_text">Bạn chưa có tài khoản? Đăng ký</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="home">Trang chủ</string>
    <string name="device">Thiết bị</string>
    <string name="notification">Thông báo</string>
    <string name="person">Cá nhân</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_reset_password">Nhập địa chỉ mail của bạn:</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="edit_profile">Chỉnh sửa thông tin</string>
    <string name="save">Lưu</string>
    <string name="help">Trợ giúp</string>
    <string name="settings">Cài đặt</string>
    <string name="set_interface">Giao diện</string>
    <string name="about">About Smart Home</string>
</resources>