<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg"
    tools:context=".view.ProfileActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:layout_marginBottom="20dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/user_profile"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/baseline_keyboard_arrow_left_24"
            android:gravity="center_vertical|start"
            android:text="Thông tin tài khoản"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <ImageView
            android:id="@+id/profileImg"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/ic_user_account_circle" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/white_box_blue"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/name"
                android:textColor="@color/blue_gradient"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:alpha="0.5"
            android:background="@color/blue_gradient" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email"
                android:textColor="@color/blue_gradient"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profileEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:alpha="0.5"
            android:background="@color/blue_gradient" />

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_marginLeft="10dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginRight="10dp"-->
<!--            android:orientation="horizontal"-->
<!--            android:padding="8dp">-->

<!--            <TextView-->
<!--                android:id="@+id/username"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/username"-->
<!--                android:textColor="@color/blue_gradient"-->
<!--                android:textSize="18sp"-->
<!--                android:textStyle="bold" />-->

<!--            <TextView-->
<!--                android:id="@+id/profileUsername"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text="username"-->
<!--                android:textAlignment="viewEnd"-->
<!--                android:textColor="@color/white"-->
<!--                android:textSize="18sp" />-->

<!--        </LinearLayout>-->

<!--        <androidx.appcompat.widget.AppCompatImageView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="1dp"-->
<!--            android:layout_margin="10dp"-->
<!--            android:alpha="0.5"-->
<!--            android:background="@color/blue_gradient" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/password"
                android:textColor="@color/blue_gradient"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profilePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="viewEnd"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:alpha="0.5"
            android:background="@color/blue_gradient" />

    </LinearLayout>

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/edit_profile"
        android:layout_gravity="center"
        android:textSize="18sp"
        app:cornerRadius="20dp" />

</LinearLayout>